[studio-hints] make sidebar fixed on smaller screens

--- a/packages/@sanity/default-layout/src/components/styles/NavBar.css
+++ b/packages/@sanity/default-layout/src/components/styles/NavBar.css
@@ -6,16 +6,16 @@
 
 .root {
   display: grid;
-  grid-template-areas:   "hamburger         createButton       branding     extras   searchButton";
-  grid-template-columns: var(--nav-bar-box) var(--nav-bar-box) auto         auto     var(--nav-bar-box);
+  grid-template-areas:   "hamburger         createButton       branding     extras   searchButton        sidecarStatus";
+  grid-template-columns: var(--nav-bar-box) var(--nav-bar-box) auto         auto     var(--nav-bar-box)  min-content;
   grid-template-rows: var(--nav-bar-box);
   box-sizing: border-box;
   align-items: stretch;
 
   @media (--screen-medium) {
     grid-template-rows: var(--nav-bar-box);
-    grid-template-areas: " hamburger   branding    createButton       search               extras";
-    grid-template-columns: max-content max-content var(--nav-bar-box) minmax(240px, 100%) max-content;
+    grid-template-areas: " hamburger   branding    createButton       search               extras      sidecarStatus";
+    grid-template-columns: max-content max-content var(--nav-bar-box) minmax(240px, 100%) max-content  min-content;
 
     @nest &.withToolSwitcher {
       grid-template-areas: " branding    createButton       search               spaceSwitcher toolSwitcher extras      sanityStatus loginStatus sidecarStatus";
@@ -152,14 +152,8 @@ a.branding {
 
 .sidecarStatus {
   grid-area: sidecarStatus;
-  display: none;
-
-  @media (--screen-medium) {
-    @nest .withToolSwitcher & {
-      display: flex;
-      justify-content: center;
-    }
-  }
+  display: flex;
+  justify-content: center;
 }
 
 .extras {
