--- a/packages/@sanity/default-layout/src/components/styles/Sidecar.css
+++ b/packages/@sanity/default-layout/src/components/styles/Sidecar.css
@@ -6,15 +6,26 @@
 
 .root {
   display: none;
+  max-width: 0;
+  width: 100%;
+  min-height: calc(100vh - var(--nav-bar-box));
+  max-height: calc(100vh - var(--nav-bar-box));
+  transition: transform 500ms ease-in-out, max-width 500ms ease-in-out;
+  transform: translate3d(420px, 0, 0);
 
   @media (--screen-medium) {
+    position: fixed;
+    top: var(--nav-bar-box);
+    right: 0;
     display: block;
-    min-height: calc(100vh - var(--nav-bar-box));
-    max-height: calc(100vh - var(--nav-bar-box));
-    max-width: 0;
-    transition: transform 500ms ease-in-out, max-width 500ms ease-in-out;
-    transform: translate3d(420px, 0, 0);
-    width: 100%;
+    height: calc(100vh - var(--nav-bar-box));
+    z-index: var(--zindex-drawer);
+  }
+
+  @media (--screen-large) {
+    position: relative;
+    display: block;
+    top: 0;
   }
 }
 
